test/banana/grammar/should_fail/wrong_symbol_in_expr.banana
a = b -> c
# RAISE ParseException